# ChangeLog for dev-util/buildbot
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot/ChangeLog,v 1.83 2011/01/09 18:14:23 armin76 Exp $

  09 Jan 2011; Raúl Porcel <armin76@gentoo.org> buildbot-0.8.2.ebuild:
  alpha/ia64/s390/sh stable wrt #349143

  07 Jan 2011; Brent Baude <ranger@gentoo.org> buildbot-0.8.2.ebuild:
  Marking buildbot-0.8.2 ppc for bug 349143

  04 Jan 2011; Michael Weber <xmw@gentoo.org> buildbot-0.8.2.ebuild:
  sparc stable (bug 349143)

  28 Dec 2010; Brent Baude <ranger@gentoo.org> buildbot-0.8.2.ebuild:
  Marking buildbot-0.8.2 ppc64 for bug 349143

  27 Dec 2010; Markus Meier <maekke@gentoo.org> buildbot-0.8.2.ebuild:
  arm stable, bug #349143

  20 Dec 2010; Markos Chandras <hwoarang@gentoo.org> buildbot-0.8.2.ebuild:
  Stable on amd64 wrt bug #349143

*buildbot-0.8.3 (20 Dec 2010)

  20 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +buildbot-0.8.3.ebuild, +files/buildmaster.initd:
  Version bump.

  20 Dec 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  buildbot-0.8.2.ebuild:
  x86 stable wrt bug #349143

  14 Nov 2010; Raúl Porcel <armin76@gentoo.org> buildbot-0.8.0_p1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #339863

  10 Nov 2010; Markus Meier <maekke@gentoo.org> buildbot-0.8.0_p1.ebuild:
  arm stable, bug #339863

  08 Nov 2010; Jeroen Roovers <jer@gentoo.org> buildbot-0.8.0_p1.ebuild:
  Stable for PPC (bug #339863).

  08 Nov 2010; Jeroen Roovers <jer@gentoo.org> buildbot-0.8.0_p1.ebuild:
  Stable for HPPA (bug #339863).

  08 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  buildbot-0.8.0_p1.ebuild:
  Stable on amd64 wrt bug #339863

  08 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  buildbot-0.8.0_p1.ebuild:
  stable x86, security bug 339863

*buildbot-0.8.2 (08 Nov 2010)

  08 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +buildbot-0.8.2.ebuild:
  Version bump (bug #327409).
